# storage/docs/api-docs.json
@@ -19,6 +19,97 @@
         "application/json"
     ],
     "paths": {
+        "/admin/topic/{topicId}/tag/{tagId}": {
+            "get": {
+                "tags": [
+                    "Article"
+                ],
+                "summary": "Display the articles for a specified tag",
+                "description": "Get the articles for a specified tag",
+                "operationId": "indexArticlesByTag",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "api_token",
+                        "in": "query",
+                        "description": "Authorization token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "topicId",
+                        "in": "path",
+                        "description": "Topic id",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    {
+                        "name": "tagId",
+                        "in": "path",
+                        "description": "Tag id",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    {
+                        "name": "locale",
+                        "in": "query",
+                        "description": "User preferred language(en|hi), default en",
+                        "type": "string",
+                        "default": "en",
+                        "enum": [
+                            "en",
+                            "hi"
+                        ]
+                    },
+                    {
+                        "name": "perPage",
+                        "in": "query",
+                        "description": "Number of items you would like displayed per page",
+                        "type": "integer",
+                        "format": "int64",
+                        "default": "15"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Current page number to display",
+                        "type": "integer",
+                        "format": "int64",
+                        "default": "1"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/ResponseLevelTopics"
+                        }
+                    },
+                    "422": {
+                        "description": "Unsuccessful operation - Validation failed",
+                        "schema": {
+                            "$ref": "#/definitions/validationErrorModel"
+                        }
+                    },
+                    "404": {
+                        "description": "Unsuccessful operation, category not found",
+                        "schema": {
+                            "$ref": "#/definitions/responseModel"
+                        }
+                    },
+                    "500": {
+                        "description": "Unexpected error",
+                        "schema": {
+                            "$ref": "#/definitions/responseModel"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/{levelId}/topics": {
             "get": {
                 "tags": [
@@ -205,6 +296,82 @@
         "rateLimit": {
             "type": "object"
         },
+        "ResponseArticles": {
+            "required": [
+                "id"
+            ],
+            "type": "object",
+            "allOf": [
+                {
+                    "$ref": "#definitions/responseModel"
+                },
+                {
+                    "required": [
+                        "data"
+                    ],
+                    "properties": {
+                        "data": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/ArticleData"
+                            }
+                        }
+                    }
+                }
+            ]
+        },
+        "ArticleData": {
+            "required": [
+                "data"
+            ],
+            "type": "object",
+            "allOf": [
+                {
+                    "$ref": "#definitions/Pagination"
+                },
+                {
+                    "required": [
+                        "topics"
+                    ],
+                    "properties": {
+                        "topics": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Article"
+                            }
+                        }
+                    }
+                }
+            ]
+        },
+        "Article": {
+            "required": [
+                "id",
+                "title",
+                "sourceUrl",
+                "slug"
+            ],
+            "properties": {
+                "id": {
+                    "description": "Article id",
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "title": {
+                    "description": "Article title",
+                    "type": "string"
+                },
+                "sourceUrl": {
+                    "description": "Article's source URL",
+                    "type": "string"
+                },
+                "slug": {
+                    "description": "Article's slug",
+                    "type": "string"
+                }
+            },
+            "type": "object"
+        },
         "ResponseLevelTopics": {
             "required": [
                 "id"
@@ -286,6 +453,10 @@
         {
             "name": "Auth",
             "description": "Operations about Authentication"
+        },
+        {
+            "name": "Article",
+            "description": "Everything about Categories"
         },
         {
             "name": "Admin.Level",
